--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "lint-staged": "^9.5.0",
     "prettier": "1.19.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
