--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moresec/utils",
-  "version": "0.2.1",
-  "description": "moresec fe utils",
+  "version": "0.3.0",
+  "description": "MoresecFE's javascript utils",
   "scripts": {
     "lint": "eslint --fix \"src/**/*.ts\"",
     "build": "father-build"
@@ -11,8 +11,8 @@
     "url": "git+https://github.com/MoresecFE/utils.git"
   },
   "keywords": [
-    "javascript utils",
-    "moresec utils"
+    "javascript-utils",
+    "utils"
   ],
   "author": "cnjs",
   "license": "MIT",
