--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moresec/utils",
-  "version": "0.4.0",
+  "version": "0.4.2",
   "description": "MoresecFE's javascript utils",
   "scripts": {
     "lint": "eslint --fix \"src/**/*.ts\"",
@@ -25,7 +25,7 @@
     "package.json",
     "README.md"
   ],
-  "main": "./dist/index.esm.js",
+  "main": "./dist/index.js",
   "devDependencies": {
     "@moresec/eslint-config-moresec": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
