--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,4 @@
 {
-  "presets": [
-    [
-        "@babel/preset-env",
-        {
-            "targets": {
-                "node": "current"
-            }
-        }
-    ],
-    "@babel/preset-typescript"
-  ],
+  "presets": ["@babel/preset-typescript"],
   "plugins": ["transform-es2015-modules-commonjs"]
 }
