--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moresec/utils",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "description": "MoresecFE's javascript utils",
   "scripts": {
     "lint": "eslint --fix \"src/**/*.ts\"",
@@ -28,12 +28,13 @@
   ],
   "main": "./dist/index.js",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.9.0",
     "@moresec/eslint-config-moresec": "^1.1.3",
+    "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "chalk": "^2.4.2",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
